--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       <div class="container">
         <div class="row">
           <div class="col-8" id="random-number">
-            RANDOM NUMBER GOES HERE
           </div>
           <div class="col">
             <div id="wins">Wins:</div>
@@ -53,14 +52,14 @@
   </div>
     <div class="container" id="border-top"> 
         <div class="row">
-          <div class="col">
+          <div class="col" id="testclick">
             Your score is:
           </div>
         </div>
     </div>
     <div class="container" id="border-top">
         <div class="row">
-          <div class="col">
+          <div class="col" id="printscore">
             SCORE GOES HERE
           </div>
         </div>
