--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <div class="container" id="crystal-container">
         <div class="row">
             <div class="btn-group" role="group" aria-label="Crystals">
-                <button type="button" class="btn btn-secondary"><img src="assets/images/bluecrystal.png" class="rounded float-left" alt="blue crystal img"></button>
-                <button type="button" class="btn btn-secondary"><img src="assets/images/greencrystal.png" class="rounded float-left" alt="green crystal img"></button>
-                <button type="button" class="btn btn-secondary"><img src="assets/images/pinkcrystal.png" class="rounded float-left" alt="pink crystal img"></button>
-                <button type="button" class="btn btn-secondary"><img src="assets/images/purplecrystal.png" class="rounded float-left" alt="purple crystal img"></button>
+                <button type="button" class="btn btn-secondary" id="btn1"><img src="assets/images/bluecrystal.png" class="rounded float-left" alt="blue crystal img"></button>
+                <button type="button" class="btn btn-secondary" id="btn2"><img src="assets/images/greencrystal.png" class="rounded float-left" alt="green crystal img"></button>
+                <button type="button" class="btn btn-secondary" id="btn3"><img src="assets/images/pinkcrystal.png" class="rounded float-left" alt="pink crystal img"></button>
+                <button type="button" class="btn btn-secondary" id="btn4"><img src="assets/images/purplecrystal.png" class="rounded float-left" alt="purple crystal img"></button>
               </div>
     </div>
   </div>
